<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/afrispace"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collect_art_from_the_worlds_leading_artists"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="RtlSymmetry"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_your_personalised_profile_get_market_sell_an_dbuy_art_with_confidence"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:textStyle="italic"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="RtlSymmetry" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
     android:paddingStart="10dp"
     android:layout_marginTop="280dp"
     android:layout_marginHorizontal="10dp"
     tools:ignore="RtlSymmetry">

     <Button
         android:id="@+id/btnLogin"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:textColor="@color/white"
         android:background="@drawable/btn1"
         android:backgroundTint="@color/button_background_login"
         android:backgroundTintMode="src_over"
         >

     </Button>

     <Button
         android:id="@+id/btnSignup"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/sign_up"
         android:layout_marginStart="30dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:background="@drawable/btnsignup"
         android:backgroundTint="@color/button_background_color"
         style="?android:attr/buttonBarButtonStyle">

     </Button>

 </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_smaxlinktech"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        tools:ignore="RtlSymmetry"
        />

</LinearLayout>