<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/artme1"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_over"
    tools:context=".MainSignup">



    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_there"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up here"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/btnFacbook"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="2dp"
            android:drawableStart="@drawable/ic_icons8_facebook"
            android:text="facebook"
            android:textColor="@color/white"
            android:ellipsize="start"
            android:gravity="center"
            android:textAllCaps="false"
            android:paddingStart="10dp"
            android:background="#008DFF"
            />

        <Button
            android:id="@+id/btnGmail"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_google_plus_1_"
            android:ellipsize="start"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="Google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="#D5532A"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="OR"
            android:textSize="17sp"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/tvText"
            android:background="#7E7979"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="#7E7979"
            />

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/username"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_marginHorizontal="20dp"

        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:gravity="center"
            android:textColor="@color/white"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginin"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#008DFF"
        android:textAllCaps="true"

        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forget your password?"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#FF9800"
        android:textAllCaps="true"/>



</LinearLayout>